Cycles - Non-Deformation Motion Blur is inconsistant #56396

Closed
opened 2018-08-15 08:58:42 +02:00 by Carlo Andreacchio · 11 comments

System Information
Ubuntu 17.10 GTX 1080

Blender Version
Broken: b85be88655

Short description of error
Non-Deformation Motion Blur is inconsistant

Exact steps for others to reproduce the error

  1. open attached blend file
  2. render
  3. disable deformation motion blur option, but leave object motion blur enabled
  4. render
  5. notice difference
    bug.blend
**System Information** Ubuntu 17.10 GTX 1080 **Blender Version** Broken: b85be88655c **Short description of error** Non-Deformation Motion Blur is inconsistant **Exact steps for others to reproduce the error** 1. open attached blend file 2. render 3. disable deformation motion blur option, but leave object motion blur enabled 4. render 5. notice difference [bug.blend](https://archive.blender.org/developer/F4232727/bug.blend)

Added subscriber: @candreacchio

Added subscriber: @candreacchio

This was not the behaviour in 7f86afec9d . Effects CPU & GPU aswell.

This was not the behaviour in 7f86afec9d . Effects CPU & GPU aswell.

Issue is not present in 78c2063685
Issue is present in db333d9ea4

Issue is not present in 78c2063685 Issue is present in db333d9ea4
Brecht Van Lommel was assigned by Bastien Montagne 2018-08-15 11:16:28 +02:00

The motion blur sometimes looks the same as if the object is static, steps below.

open bug file
disable deformation motion blur
go to frame 1
in the background add a static cube
render

The motion blur sometimes looks the same as if the object is static, steps below. open bug file disable deformation motion blur go to frame 1 in the background add a static cube render

Just wondering if there has been any update on this bug?

Thanks

Carlo

Just wondering if there has been any update on this bug? Thanks Carlo

This issue was referenced by blender/cycles@e5d53d4b6a

This issue was referenced by blender/cycles@e5d53d4b6ae9df6cbf77135f0c2ff8ae906e811d

This issue was referenced by bbd3ac73bc

This issue was referenced by bbd3ac73bcfa8d14313e32ba0d0231d540540d5a

This issue was referenced by 637d938c0b

This issue was referenced by 637d938c0b8431f3f44ff89ad899b4f1237d167e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks for the bug fix... Any chance we can get it applied to the master branch aswell?

Thanks again

Carlo

Thanks for the bug fix... Any chance we can get it applied to the master branch aswell? Thanks again Carlo

Done. That was actually my intention but used the wrong branch.

Done. That was actually my intention but used the wrong branch.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56396
No description provided.