Fix T56396: Cycles wrong object motion blur with deformation blur disabled.