intern/cycles/blender/blender_object.cpp
@@ -444,8 +444,8 @@ Object *BlenderSync::sync_object(BL::Depsgraph& b_depsgraph,
 
 			if(scene->need_motion() == Scene::MOTION_BLUR) {
 				motion_steps = object_motion_steps(b_parent, b_ob);
+				mesh->motion_steps = motion_steps;
 				if(motion_steps && object_use_deform_motion(b_parent, b_ob)) {
-					mesh->motion_steps = motion_steps;
 					mesh->use_motion_blur = true;
 				}
 			}
